<resources>
    <string name="app_name_long">Calisthenic Strength System</string>
    <string name="app_name_short">CSS</string>
    <string name="sign_in_username_email">Username/Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here"><u>New? Register here</u></string>
    <string name="register_email">Email</string>
    <string name="register_sign_in"><u>Already have an account?<br />  Sign in Here</u></string>
    <string name="register_register">Register</string>
    <string name="register_password">Password</string>
    <string name="register_username">Username</string>
    <string name="register_height">Height(in)</string>
    <string name="register_weight">Weight(lbs)</string>
    <string name="asterick">*</string>
    <string name="register_date_of_birth">Date of Birth</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="new_routine_save_button">Save</string>
    <string name="new_routine_description">Description</string>
    <string name="new_routine_name">Name</string>
    <string name="new_routine_empty_not_saved">Insufficient data. Routine not saved</string>
    <string name="routine_list_title">Routine List</string>
    <string name="exercise_list_title">Exercise List</string>
    <string name="new_exercise_description">Description</string>
    <string name="new_exercise_name">Name</string>
    <string name="new_exercise_save_button">Save</string>
    <string name="no_routines">No Routines</string>
    <string name="routine_exercises">Exercises</string>
    <string name="new_routine_add_exercises">Add exercises</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="edit_exercises">Edit Exercises</string>
    <string name="edit_routine_info">Edit Routine Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="add_record">Add Record</string>
    <string name="delete_records">Delete Records</string>
    <string name="weight_records">Weight Records</string>
    <string name="add_weight">Add Weight</string>
    <string name="weight_in_lbs">Weight in Lbs</string>
    <string name="add">Add</string>
    <string name="no_records">No Records</string>

    <string-array name="exercise_array">
        <item>Pull Up – The traditional pull up! Grab an overhanging bar or structure palms with your palms facing away from you and pull yourself up to the bar using your back muscles. Control the movement on the way down.</item>
        <item>Chin Up – The traditional chin up! Grab an overhanging bar or structure with your palms facing toward you and pull yourself up to the bar using your back muscles. Control the movement on the way down.</item>
        <item>Close Grip Chin Up – Similar to a traditional chin up, but place your hands directly side-by-side, so they are touching one another. Perform chin ups from this position.</item>
        <item>Inverted Row – Lie on your back with an overhanging bar or structure above your head. Grab the structure and pull yourself up to the structure until you reach your full range of motion. Lower down while controlling your body.</item>
        <item>Typewriter Pull Up – An advanced exercise. Pull yourself up to a pull up bar and then traverse to one side. After traversing one direction, traverse to the other direction. Then, return to the center and lower down. For increased difficulty, rotate your far hand across the bar when on each side of the traversal.</item>
        <item>Wide Grip Pull Up – Similar to a traditional pull up, but place your hands much wider than you normally would. Perform pull ups from this position.</item>
        <item>Wide Grip Pull Up – Similar to a traditional pull up, but place your hands much wider than you normally would. Perform pull ups from this position.</item>
        <item>Push Up – Traditional pull up movement, get into a high plank position, lower to the ground, and push back up to the start.</item>
        <item>One Arm Push Up – An advanced exercise. Perform push ups using only one arm. Focus on a tight core and spread your legs for some added balance.</item>
        <item>Dips – Place both hands on an elevated surface and hold yourself up. Lower down until you reach your full range of motion or slightly less if your shoulders are injury-prone. Push yourself back to the starting position.</item>
        <item>Archer Push Up – Get into the push up position with your hands placed out far to the sides. Lower yourself toward one hand and push back up to the start position. Repeat on the other side.</item>
        <item>Diamond Push Up – Place your hands so they form a diamond underneath you. Perform push ups from this position, focusing on triceps and the upper chest muscles.</item>
        <item>Handstand Push Up – An advanced exercise. Kick up into a handstand with a wall supporting your feet. Lower down until your head touches the ground and push back to the starting position.</item>
        <item>Pike Push Up – Align your body in a V-like shape with your hands and feet on the ground. Lower your head towards your hands and push back up.</item>
        <item>Tricep Extension – Assume a push up position but drop your elbows to the floor. Push up onto your hands and then lower back onto your elbows.</item>
        <item>Superman Push Up – An advanced exercise. Lay on your stomach and place your hands far above your head. Push up and lower back down.</item>
        <item>Plank – Assume the push up position and hold or lower you elbows to the ground and hold.</item>
        <item>Side Plank – Lay on one side on the floor. Raise up onto only your feet and your elbow and hold.</item>
        <item>L-Sit – An advanced exercise. Place your hands on the ground while sitting and push yourself up so that only your hands remain on the ground. Hold this position.</item>
        <item>Bicycle Crunches – Lie on your back and raise your knees up 90 degrees. Crunch toward one knee while extending the opposite leg. Repeat the other direction.</item>
        <item>V-Ups – Lie on your back on the floor with your arms overhead. Contract and bring you upper and lower body off the floor, trying to meet in the middle.</item>
        <item>Russian Twist – Sit on the floor and lean back to engage your core. Place your arms in front of you and rotate side to side.</item>
        <item>Hanging Leg Raises – Hang from an overhead bar. Raise your legs up to touch the bar.</item>
        <item>Pistol Squats – An advanced exercise. Balance on one leg and extend your other leg out in front of you. Perform one leg squats, going as low as possible.</item>
        <item>Lateral Lunges – Stand feet with your feet shoulder width apart. Push one leg further out to your side and perform a lunging motion. Repeat the other direction.</item>
        <item>Squats – The traditional squat! Stand with your feet shoulder width apart, and bend your legs to lower yourself down. Extend your legs and drive your hips forward to return to the starting position.</item>
        <item>Calf Raises – Stand on a slightly elevated surface with just the balls of your feet. Raise up using only your calf muscles. Return to the starting position.</item>
        <item>Back Bridge – An advanced exercise. Lay on your back. Place your hands face down on the floor next to your head and press up, forming a bridge with your body.</item>
        <item>Back Bridge – An advanced exercise. Lay on your back. Place your hands face down on the floor next to your head and press up, forming a bridge with your body.</item>
        <item>Sprints – Traditional sprints. Run as fast you can for your time or distance.</item>
        <item>Plyo Squats – Stand feet less than should width apart. Hop out to your feet just beyond shoulder width apart and perform a squat. Hop back to the starting position.</item>
    </string-array>
</resources>
