<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
    android:id="@+id/new_exercise_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    style="@style/toolbar_style"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    app:popupTheme="@style/AppTheme.PopupOverlay">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:padding="10dp"
        android:layout_margin="0dp"/>

    <TextView
        android:id="@+id/routine_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_short"
        style="@style/toolbar_title_style"/>

</android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/new_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_routine_name"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/new_exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:hint="@string/new_routine_description"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textAutoComplete|textMultiLine"
            android:textSize="18sp" />

    </LinearLayout>



    <Button
        android:id="@+id/new_exercise_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/new_exercise_save_button"
        android:textColor="@color/buttonLabel" />

</LinearLayout>