<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">


    <android.support.v7.widget.Toolbar
        android:id="@+id/routine_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/toolbar_style"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            android:padding="10dp"
            android:layout_margin="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_list_title"
            style="@style/toolbar_title_style"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/routine_list_more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_more_vert_black_30dp"
                android:onClick="toggleMoreOptions"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_tracker_button"
        android:layout_alignParentEnd="true"
        android:text="@string/sign_out"
        style="@style/button_style"
        android:background="@color/colorAccent"
        android:visibility="gone"
        android:onClick="signOut"/>

    <Button
        android:id="@+id/weight_tracker_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/routine_list_toolbar"
        android:layout_alignParentEnd="true"
        android:text="@string/weight_tracker"
        style="@style/button_style"
        android:background="@color/colorAccent"
        android:visibility="gone"
        android:onClick="startWeightTracker"/>


    <include layout="@layout/list_content"
        android:layout_below="@id/routine_list_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/routine_list_add_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginBottom="40dp"
    android:layout_marginEnd="40dp"
    android:src="@drawable/ic_add_black_24dp"/>



</RelativeLayout>
